# fast-api

./: requirements.txt
app/: README.md  config.py  main.py  pyproject.toml
app/api_docs/: request.py
app/core/: security.py
app/db/: database.py  session.py
app/routes/: auth.py  tasks.py
app/schemas/: schemas.py  task.py
