[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["aivaf <sudarikova.ols@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
