[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["aivaf <sudarikova.ols@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
sqlmodel = "^0.0.24"
pydantic-settings = "^2.9.1"
passlib = "^1.7.4"
jose = "^1.0.0"
python-jose = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
